Thu Aug  7 18:50:59 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* knotes.cpp: knotes now save themselves on X sever exit
	
