@@ -2,4 +2,6 @@ Thu Aug  7 18:50:59 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>
 
 	* knotes.cpp: knotes now save themselves on X sever exit
 	
+Mon Nov 17 21:32:28 1997  didier Belot <dib@avo.fr>
 
+	* added all necessary stuff for locale (klocale->translate())
